<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="com.example.encryptocam.navigation.NavCommand" />

        <variable
            name="viewModel"
            type="com.example.encryptocam.screens.camera.CameraViewModel" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_action_bar_height"
        android:background="@drawable/top_action_bar_scrim"
        android:paddingStart="@dimen/top_action_bar_padding_horizontal"
        android:paddingEnd="@dimen/top_action_bar_padding_horizontal">

        <ImageView
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:contentDescription="@string/cd_close_button"
            android:onClick="@{()->viewModel.navigateBack()}"
            android:padding="@dimen/top_action_button_padding"
            app:srcCompat="@drawable/ic_close_vd_white_24" />

        <ImageView
            android:id="@+id/facing_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/cd_facing_button"
            android:onClick="@{()->viewModel.toggleCameraFacing()}"
            android:padding="@dimen/top_action_button_padding"
            app:setSelectedState="@{viewModel.frontFacingCameraSelection}"
            app:srcCompat="@drawable/camera_facing" />

        <ImageView
            android:id="@+id/flash_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/facing_camera"
            android:contentDescription="@string/cd_flash_button"
            android:onClick="@{()->viewModel.toggleFlash()}"
            android:padding="@dimen/top_action_button_padding"
            app:setSelectedState="@{viewModel.flashStateEnabled}"
            app:srcCompat="@drawable/camera_flash" />

        <ImageView
            android:id="@+id/ae_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/flash_button"
            android:contentDescription="@string/cd_ae_button"
            android:onClick="@{()->viewModel.toggleAEM()}"
            android:padding="@dimen/top_action_button_padding"
            app:setSelectedState="@{viewModel.aemEnabled}"
            app:srcCompat="@drawable/camera_ae" />

    </RelativeLayout>
</layout>


